--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "express": "^4.14.0",
     "react": "^15.1.0",
-    "react-dom": "^15.1.0"
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "redux": "^3.5.2"
   },
   "devDependencies": {
     "babel-core": "^6.10.4",
@@ -21,6 +23,7 @@
     "css-loader": "^0.23.1",
     "node-sass": "^3.8.0",
     "react-hot-loader": "^1.3.0",
+    "redux-logger": "^2.6.1",
     "sass-loader": "^3.2.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
